--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
   </head>
   <body>
     <div class="main">
-      <h1>Task List</h1>
+      <div class="header">
+        <h1>Task List</h1>
+        <div class="btn-group" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-primary">Left</button>
+          <button type="button" class="btn btn-primary">Middle</button>
+          <button type="button" class="btn btn-primary">Right</button>
+        </div>
+      </div>
       <div class="alert dismissible">
         Please, enter some text.
         <i class="fa-solid fa-square-xmark"></i>
